<resources>
    <string name="app_name">First App</string>
    <string name="edit_message">Enter The Class</string>
    <string name="button_send">Send</string>
    <string name="edit_grade">Percent</string>
    <string name="table_info">tablee</string>
    <string name="class_code">Class</string>
    <string name="Title">AvgCalc</string>
    <string name="buttonClear">Clear</string>
    <string name="Go">Let\'s Go</string>
    <string name="title_activity_open_screen">OpenScreen</string>
    <string name="EditSwitchClass">Edit Class</string>
    <string name="EditSwitchGrade">Edit Grade</string>
    <string name="saveClass">Save Class</string>
    <string name="saveGrade">Save Grade</string>
    <string name="loadData">Load Data</string>
    <string name="deleteFile">Delete File</string>
</resources>
