<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/Title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Class"
        android:layout_width="217dp"
        android:layout_height="44dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="140dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/edit_message"
        android:inputType="textPersonName"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/Grade"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Forward"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginBottom="8dp"
        android:text="@string/button_send"
        app:layout_constraintBottom_toBottomOf="@+id/Grade"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/Class"
        app:layout_constraintTop_toTopOf="@+id/Class" />

    <EditText
        android:id="@+id/Grade"
        android:layout_width="206dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:hint="@string/edit_grade"
        android:inputType="number"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/Class"
        app:layout_constraintStart_toStartOf="@+id/Class"
        app:layout_constraintTop_toBottomOf="@+id/Class" />

    <TextView
        android:id="@+id/Average"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginTop="256dp"
        android:layout_marginBottom="256dp"
        app:layout_constraintBottom_toTopOf="@+id/clearButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/grade1" />

    <TextView
        android:id="@+id/grade1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="Grade1"
        app:layout_constraintEnd_toStartOf="@+id/class1"
        app:layout_constraintHorizontal_bias="0.031"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Grade" />


    <TextView
        android:id="@+id/class1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:text="Class 1"
        app:layout_constraintBottom_toBottomOf="@+id/grade1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/grade1"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/clearButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:text="@string/buttonClear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/EditClass"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="76dp"
        android:layout_marginLeft="76dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="64dp"
        android:text="@string/EditSwitchClass"
        app:layout_constraintBottom_toTopOf="@+id/clearButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit"
        app:layout_constraintVertical_bias="0.209" />

    <Button
        android:id="@+id/editGrade"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginEnd="72dp"
        android:layout_marginRight="72dp"
        android:text="@string/EditchSwitchGrade"
        app:layout_constraintBottom_toBottomOf="@+id/EditClass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/EditClass" />

    <EditText
        android:id="@+id/edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="64dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/class1"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/submitEdit"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="44dp"
        android:layout_marginBottom="8dp"
        android:text="Submit"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/clearButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditClass" />


</androidx.constraintlayout.widget.ConstraintLayout>